# ChangeLog for x11-themes/gtk-engines-xfce
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gtk-engines-xfce-2.5.93 (14 Jan 2009)

  14 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +gtk-engines-xfce-2.5.93.ebuild:
  Xfce-4.6 beta3

*gtk-engines-xfce-2.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +gtk-engines-xfce-2.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  09 Nov 2007; Christoph Mende <angelos@gentoo.org>
  gtk-engines-xfce-9999.ebuild:
  Remove S definition

  29 Sep 2007; Christoph Mende <angelos@gentoo.org>
  gtk-engines-xfce-9999.ebuild:
  Cleanup

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
