@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST gtk-xfce-engine-2.5.92.tar.bz2 274675 RMD160 a0da779bb47877a208b076835dac2dd2177edb44 SHA1 f403c3b0817ba46a953cf4aa725d1dea52e9b216 SHA256 b18755a169f0b301d4682ef5ff018a8734249d5749ba4097b667f181da8011d9
 DIST gtk-xfce-engine-2.5.93.tar.bz2 280019 RMD160 956b629d3e0a84f740860c94c0a8cfd2b7a0832f SHA1 18b24613b8b8b84a3dbe938a4c66ce65a3925bcb SHA256 3ce601498f7e1d5a0cce6b6ecb628b9de2dac526ad10bd0721ce7000a709a752
+DIST gtk-xfce-engine-2.5.99.1.tar.bz2 313125 RMD160 eae37b64347aa214a9526d76818688c901859428 SHA1 1d8d0c2914b7f5746b76b49c3e8dde840705213e SHA256 0c728f38e154210a5bd22f4dfb77424ba81d9559f31916dadde347bdfe338b24
 EBUILD gtk-engines-xfce-2.5.92.ebuild 449 RMD160 b19f439f19edf26a2af947c2bf1f980a06a71d2e SHA1 e430663d00a9185ea7e0b09f59a735d2b659f1a0 SHA256 81c961324c4ca644eaf5e24a480e6625f16aaec12628fcab9abd009a40d17317
 EBUILD gtk-engines-xfce-2.5.93.ebuild 449 RMD160 8f2ae271047eb302bb603ee3ddc45c3b6be14ca2 SHA1 0c6d519a3104a442bae531190e2e8871e41f8091 SHA256 ab3c717af2251e4d81757c32ec274ca44c13e01f8b7dbb9c46d2b89ba98a2518
+EBUILD gtk-engines-xfce-2.5.99.1.ebuild 451 RMD160 a2f589845ebc755808d1bcf03af841a0408db4dc SHA1 f45653e28bfde0d86fa6f4c1410a4aa8ccefa52a SHA256 ac19a4bd7963ad40dbb6817150ae9634e0ff6eecf8245f8b45253fbdf4ac55de
 EBUILD gtk-engines-xfce-9999.ebuild 430 RMD160 15720038431fe418758f6a060ef6f8348da7bba6 SHA1 c28f46d9660b9e1aaf0870a3dc50a1c9c9818f66 SHA256 b92cab464bd6cdfb7b3c8039fb8fe96e61a18576ebc95d2101c6fe8bb93e2ec4
-MISC ChangeLog 710 RMD160 6992c6481775b44d606f47c84b96acdb9d16f31f SHA1 f1caba92d821c5ad21e457d4b9de6ff7c2634745 SHA256 a8c94ced6e88d4728c7a82649f1536ca67c906f2ba8be926825dac4d7dc60770
+MISC ChangeLog 857 RMD160 cad138963731f6941cfe8d33411a3083e6144c94 SHA1 9b8c7bf74aa2c0d345c4f1e7e4fb6dd88c01d158 SHA256 c949e06cbc08b0fbbab5d70760c9fb97e8aaed0b878dd9cd79af5fe0f7367195
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEekACgkQKhnDs22gwa/dOgCfUzExT4fdAAWqzLiW19+wCTbG
-S3YAoN/TZeVmN36spb8vhHKva0cO5zHw
-=ht3K
+iEYEARECAAYFAkl9xW8ACgkQKhnDs22gwa/TlACgkdshmjgZUQIm0PG2zkXutQVQ
+Az0AoPTU9xgSekJ09WzA1VoiVfFnNmhJ
+=3XI7
 -----END PGP SIGNATURE-----
